# coco

./: .clang-format  .gitignore  .gitmodules  BUILD_INSTRUCTIONS.md  CMakeLists.txt  LICENSE  PROJECT_ANALYSIS.md  README.md  build.sh
.claude/: settings.local.json
cmake/: openssl.cmake  st.cmake
coco/base/: CMakeLists.txt  error.cpp  error.hpp  log.cpp  log.hpp  st_coroutine.cpp  st_coroutine.hpp  st_socket.cpp  st_socket.hpp  utils.cpp  utils.hpp
coco/net/: CMakeLists.txt  client.hpp  http_stack.cpp  http_stack.hpp  net.cpp  net.hpp  server.cpp  server.hpp  tcp_stack.cpp  tcp_stack.hpp
examples/: CMakeLists.txt
examples/http-server/: CMakeLists.txt  http_client.cpp  http_server.cpp  server.crt  server.key
examples/pingpong/: CMakeLists.txt  pingpong_client.cpp  pingpong_client_tcp.cpp  pingpong_client_udp.cpp  pingpong_server.cpp  pingpong_server_tcp.cpp  pingpong_server_udp.cpp  tcp_client.cpp  tcp_server.cpp
examples/websocket/: CMakeLists.txt  ws_client.cpp
examples/websocket/ws_server_nodejs/: package-lock.json  package.json  ws_server.js
src/: CMakeLists.txt  coco_api.h
src/base/: coroutine.cpp  coroutine.hpp  coroutine_mgr.cpp  coroutine_mgr.hpp
src/common/: error.cpp  error.hpp
src/log/: log.cpp  log.hpp
src/net/: coco_socket.cpp  coco_socket.hpp
src/net/layer4/: coco_layer4.hpp  coco_ssl.cpp  coco_ssl.hpp  coco_tcp.cpp  coco_tcp.hpp  coco_udp.cpp  coco_udp.hpp
src/net/layer7/: coco_http.cpp  coco_http.hpp  coco_ws.cpp  coco_ws.hpp
src/protocol/http/: http_basic.cpp  http_basic.h  http_io.cpp  http_io.h  http_message.cpp  http_message.h  http_mux.cpp  http_mux.h  http_parser.cpp  http_parser.h
src/utils/: base64.hpp  md5.hpp  sha1.hpp  utils.cpp  utils.hpp
st/: common.h  io.c  public.h
